@@ -6,7 +6,7 @@ copyright_year   = 2012
 version          = 2.06
 
 [@Author::Plicease]
-:version = 2.20
+:version = 2.26
 release_tests = 1
 
 [RemovePrereqs]
@@ -58,6 +58,7 @@ Alien::MSYS                                    = 0.09
 Alien::MSYS2                                   = 0.02
 Alien::nasm                                    = 0.20
 Alien::Nettle                                  = 0.04
+Alien::nragent                                 = 0.02
 Alien::patch                                   = 0.14
 Alien::pkgconf                                 = 0.14
 Alien::Role::Alt                               = 0.04
@@ -90,6 +91,7 @@ Dist::Zilla::Plugin::Author::Plicease          = 2.26
 Dist::Zilla::Plugin::CommentOut                = 0.01
 Dist::Zilla::Plugin::CSS::Compressor           = 0.02
 Dist::Zilla::Plugin::FFI                       = 0.01
+Dist::Zilla::Plugin::FFI::CheckLib             = 1.01
 Dist::Zilla::Plugin::InsertExample             = 0.09
 Dist::Zilla::Plugin::JavaScript::Minifier      = 0.02
 Dist::Zilla::Plugin::MathInt64                 = 0.10
@@ -99,13 +101,13 @@ Dist::Zilla::Plugin::TextTabs                  = 0.04
 Dist::Zilla::PluginBundle::Author::Plicease    = 2.26
 Env::ShellWords                                = 0.02
 FFI                                            = 1.12
-FFI::Build                                     = 0.02
+FFI::Build                                     = 0.07
 FFI::CheckLib                                  = 0.20
 FFI::ExtractSymbols                            = 0.03
-FFI::Platypus                                  = 0.51
+FFI::Platypus                                  = 0.53
 FFI::Platypus::Lang::CPP                       = 0.04
 FFI::Platypus::Lang::CPP::Demangle::XS         = 0.03
-FFI::Platypus::Lang::Fortran                   = 0.07
+FFI::Platypus::Lang::Fortran                   = 0.08
 FFI::Platypus::Lang::Pascal                    = 0.05
 FFI::Platypus::Lang::Rust                      = 0.04
 FFI::Platypus::Type::StringArray               = 0.02
@@ -121,9 +123,10 @@ Log::Log4perl::Appender::TAP                   = 0.04
 Module::Build::FFI                             = 0.48
 Mojolicious::Plugin::Ident                     = 0.31
 Mojolicious::Plugin::TtRenderer                = 1.59
+NewRelic::Agent::FFI                           = 0.02
 Photography::DX                                = 0.02
 Photography::EV                                = 0.07
-PkgConfig                                      = 0.19026
+PkgConfig                                      = 0.21026
 PkgConfig::LibPkgConf                          = 0.09
 Shell::Config::Generate                        = 0.31
 Shell::Guess                                   = 0.08
